[package]
name = "dyad"
version = "0.0.1"
edition = "2021"
authors = ["me <putnamjm.design@gmail.com>"]

[lib]
name = "mu"
path = "./lib.rs"
bench = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
getopt = "1.1.3"
memmap = "0.7.0"
modular-bitfield = "0.11.2"
num_enum = "0.5.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4.0"